--- a/Homework 2.Rmd
+++ b/Homework 2.Rmd
@@ -13,6 +13,7 @@ df <- read.csv("Wholesale customers data.csv")
 head(df)
 str(df)
 ```
+
 ```{r}
 df$Region <- as.factor(df$Region)
 df$Channel <- as.factor(df$Channel)
@@ -24,34 +25,27 @@ summary(df)
 # a
 library(readr)
 library(car)
-data <- read_csv("Wholesale customers data.csv")
+#data <- read_csv("Wholesale customers data.csv")
 #data<-read.csv(file_path, stringsAsFactors = FALSE)
-data<-data.frame(data)
-head(data)
-str(data)
-dim(data)
 
-data$Channel<-as.factor(data$Channel)
-data$Region<-as.factor(data$Region)
-str(data)
 
-summary(data)
-Boxplot(data[,3:8])
+summary(df)
+Boxplot(df[,3:8])
 ```
 
 
 ```{r}
 # b
-summary(data)
-attach(data)
-data$f_Fresh<-as.factor(ifelse(Fresh>1200,"High_fresh","Low_Fresh"))
-data$f_Milk<-as.factor(ifelse(Milk>6327,"Hihh_Milk","Low_Milk"))
-data$f_Grocery<-as.factor(ifelse(Grocery>4756,"High_Grocery","Low_Grocery"))
-data$f_Frozen<-as.factor(ifelse(Frozen>1526,"High_Frozen","Low_Frozen"))
-data$f_Detergents_Paper<-as.factor(ifelse(Detergents_Paper>816.5,"High_Detergantes_Paper","Low_Detergantes_Paper"))
-data$f_Delicassen<-as.factor(ifelse(Delicassen>965.5,"High_Delicassen","Low_Delicassen"))
-head(data)
-str(data)
+summary(df)
+attach(df)
+df$f_Fresh<-as.factor(ifelse(Fresh>1200,"High_fresh","Low_Fresh"))
+df$f_Milk<-as.factor(ifelse(Milk>6327,"High_Milk","Low_Milk"))
+df$f_Grocery<-as.factor(ifelse(Grocery>4756,"High_Grocery","Low_Grocery"))
+df$f_Frozen<-as.factor(ifelse(Frozen>1526,"High_Frozen","Low_Frozen"))
+df$f_Detergents_Paper<-as.factor(ifelse(Detergents_Paper>816.5,"High_Detergantes_Paper","Low_Detergantes_Paper"))
+df$f_Delicassen<-as.factor(ifelse(Delicassen>965.5,"High_Delicassen","Low_Delicassen"))
+head(df)
+str(df)
 ```
 
 
@@ -59,8 +53,8 @@ str(data)
 #Point 2
 # c
 library(FactoMineR)
-data_mca<-data[,c(1:2,9:13)]
-mca_result <- MCA(data_mca,quali.sup = 1:2, graph = FALSE)
+df_mca<-df[,c(1:2,9:13)]
+mca_result <- MCA(df_mca,quali.sup = 1:2, graph = FALSE)
 summary(mca_result)
 plot.MCA(mca_result, invisible = "ind", cex = 1.2)
 ```
@@ -77,7 +71,7 @@ hcpc_res$call$t$nb.clust
 ```{r}
 # e
 library(FactoMineR)
-res.pca <- PCA(data[,3:8], graph = FALSE)
+res.pca <- PCA(df[,3:8], graph = FALSE)
 
 hcpc_res_pca <- HCPC(res.pca, graph = FALSE)
 
